--- a/trunk/greenbridge-junit/pom.xml
+++ b/trunk/greenbridge-junit/pom.xml
@@ -1,12 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.rsquared</groupId>
-  <artifactId>annob-junit</artifactId>
+  <groupId>com.googlecode.greenbridge</groupId>
+  <artifactId>greenbridge-junit</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Annob JUnit Support</name>
-  <url>http://maven.apache.org</url>
+  <name>Greenbridge JUnit Support</name>
+  <url>http://code.google.com/p/greenbridge/</url>
+  <description>A behaviour driven development tool bridging confluence, maven and junit. This is the junit module.</description>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
