--- a/greenbridge-junit/pom.xml
+++ b/greenbridge-junit/pom.xml
@@ -28,6 +28,13 @@
     </dependency>
   </dependencies>
   <build>
+      <extensions>
+            <extension>
+                <groupId>org.jvnet.wagon-svn</groupId>
+                <artifactId>wagon-svn</artifactId>
+                <version>1.8</version>
+            </extension>
+      </extensions>
       <pluginManagement>
             <plugins>
                 <plugin>
@@ -41,4 +48,11 @@
                 </plugins>
                 </pluginManagement>
   </build>
+      <distributionManagement>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>googlecode</id>
+            <url>svn:https://greenbridge.googlecode.com/svn/repo</url>
+        </repository>
+    </distributionManagement>
 </project>
