--- a/greenbridge-confluence/pom.xml
+++ b/greenbridge-confluence/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.googlecode.greenbridge</groupId>
-  <artifactId>greenbridge-core</artifactId>
+  <artifactId>greenbridge-confluence</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Greenbride Core</name>
+  <name>Greenbride Confluence</name>
   <url>http://code.google.com/p/greenbridge/</url>
-  <description>A behaviour driven development tool bridging confluence, maven and junit. This is the core module.</description>
+  <description>A behaviour driven development tool bridging confluence, maven and junit. This is the confluence module.</description>
   <developers>
     <developer>
         <name>Ryan Ramage</name>
@@ -17,7 +17,7 @@
   <dependencies>
     <dependency>
         <groupId>com.googlecode.greenbridge</groupId>
-        <artifactId>greenbridge-junit</artifactId>
+        <artifactId>greenbridge-core</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
@@ -26,18 +26,77 @@
         <version>1.1</version>
     </dependency>
     <dependency>
-        <groupId>org.freemarker</groupId>
-        <artifactId>freemarker</artifactId>
-        <version>2.3.14</version>
+        <groupId>org.easymock</groupId>
+        <artifactId>easymock</artifactId>
+        <version>2.3</version>
+        <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.5</version>
+        <groupId>org.easymock</groupId>
+        <artifactId>easymockclassextension</artifactId>
+        <version>2.3</version>
+        <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>net.java</groupId>
+        <artifactId>textile-j</artifactId>
+        <version>2.2</version>
+    </dependency>
+    <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.2.3</version>
+        </dependency>
+        <!--
+    <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        -->
   </dependencies>
   <build>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.2</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <addClasspath>true</addClasspath>
+                                <mainClass>com.googlecode.greenbridge.CommandlineRunner</mainClass>
+                                <classpathPrefix>lib/</classpathPrefix>
+                            </manifest>
+                        </archive>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-eclipse-plugin</artifactId>
+                    <version>${maven-eclipse-plugin.version}</version>
+                    <configuration>
+                        <downloadSources>${ide.download.sources}</downloadSources>
+                        <downloadJavadocs>${ide.download.javadoc}</downloadJavadocs>
+                        <wtpversion>${eclipse.wtp.version}</wtpversion>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-idea-plugin</artifactId>
+                    <version>${maven-idea-plugin.version}</version>
+                    <configuration>
+                        <downloadSources>${ide.download.sources}</downloadSources>
+                        <dependenciesAsLibraries>${intellij.dependencies.as.libraries}</dependenciesAsLibraries>
+                        <downloadJavadocs>${ide.download.javadoc}</downloadJavadocs>
+                        <linkModules>${intellij.link.modules}</linkModules>
+                        <useFullNames>${intellij.use.full.names}</useFullNames>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
@@ -64,6 +123,31 @@
                                     <include>**/*${integration.test.suffix}</include>
                                 </includes>
                             </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>cobertura-maven-plugin</artifactId>
+                    <version>${cobertura-maven-plugin.version}</version>
+                    <configuration>
+                        <instrumentation>
+                            <excludes>
+                                <exclude>**/boundary/**/*</exclude>
+                            </excludes>
+                        </instrumentation>
+                        <check>
+                            <totalBranchRate>${cobertura.total-branch-rate}</totalBranchRate>
+                            <totalLineRate>${cobertura.total-line-rate}</totalLineRate>
+                            <haltOnFailure>${cobertura.halt-on-failure}</haltOnFailure>
+                        </check>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>clean</goal>
+                                <goal>check</goal>
+                            </goals>
                         </execution>
                     </executions>
                 </plugin>
@@ -161,6 +245,14 @@
                 <inherited>true</inherited>
             </plugin>
             <plugin>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>${maven-pmd-plugin.version}</version>
+                <inherited>true</inherited>
+                <configuration>
+                    <targetJdk>${pmd.target.jdk}</targetJdk>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>${maven-surefire-report-plugin.version}</version>
                 <inherited>true</inherited>
@@ -169,6 +261,31 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>${maven-javadoc-plugin.version}</version>
                 <inherited>true</inherited>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>taglist-maven-plugin</artifactId>
+                <version>${taglist-maven-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>${cobertura-maven-plugin.version}</version>
+                <configuration>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>${findbugs-maven-plugin.version}</version>
+                <configuration>
+                    <xmlOutput>true</xmlOutput>
+                    <xmlOutputDirectory>${basedir}/target/site</xmlOutputDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </reporting>
