--- a/trunk/maven-greenbridge-plugin/pom.xml
+++ b/trunk/maven-greenbridge-plugin/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-greenbridge-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>maven-greenbridge-plugin Maven Mojo</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -16,12 +16,12 @@
     <dependency>
       <groupId>com.googlecode.greenbridge</groupId>
       <artifactId>greenbridge-core</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
     <dependency>
           <groupId>com.googlecode.greenbridge</groupId>
           <artifactId>greenbridge-confluence</artifactId>
-          <version>1.0-SNAPSHOT</version>
+          <version>1.0.0</version>
     </dependency>
     <dependency>
         <groupId>org.freemarker</groupId>
@@ -50,5 +50,42 @@
                 </configuration>
             </plugin>
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>org.jvnet.wagon-svn</groupId>
+                <artifactId>wagon-svn</artifactId>
+                <version>1.8</version>
+            </extension>
+        </extensions>
     </build>
+        <repositories>
+         <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+        </repository>
+        <repository>
+          <id>greenbridge-googlecode</id>
+          <name>Greenbridge Repository</name>
+          <url>http://greenbridge.googlecode.com/svn/repo/maven-repo</url>
+          <releases>
+           <enabled>true</enabled>
+           <updatePolicy>never</updatePolicy>
+          </releases>
+          <snapshots>
+           <enabled>false</enabled>
+          </snapshots>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>greenbridge-googlecode</id>
+            <url>dav:https://greenbridge.googlecode.com/svn/repo/maven-repo</url>
+        </repository>
+        <snapshotRepository>
+            <id>greenbridge-googlecode-snapshot</id>
+            <url>dav:https://greenbridge.googlecode.com/svn/repo/maven-snapshot-repo</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
