--- a/greenbridge-junit/pom.xml
+++ b/greenbridge-junit/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.googlecode.greenbridge</groupId>
   <artifactId>greenbridge-junit</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>Greenbridge JUnit Support</name>
   <url>http://code.google.com/p/greenbridge/</url>
   <description>A behaviour driven development tool bridging confluence, maven and junit. This is the junit module.</description>
@@ -50,9 +50,13 @@
   </build>
       <distributionManagement>
         <repository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>googlecode</id>
-            <url>svn:https://greenbridge.googlecode.com/svn/repo</url>
+            <id>greenbridge-googlecode</id>
+            <url>dav:https://greenbridge.googlecode.com/svn/repo/maven-repo</url>
         </repository>
+        <snapshotRepository>
+            <id>greenbridge-googlecode-snapshot</id>
+            <url>dav:https://greenbridge.googlecode.com/svn/repo/maven-snapshot-repo</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
     </distributionManagement>
 </project>
