--- a/greenbridge-junit/pom.xml
+++ b/greenbridge-junit/pom.xml
@@ -15,6 +15,11 @@
       <version>4.5</version>
     </dependency>
     <dependency>
+        <groupId>net.sf.json-lib</groupId>
+        <artifactId>json-lib</artifactId>
+        <version>2.2.3</version>
+    </dependency>
+    <dependency>
         <groupId>org.easymock</groupId>
         <artifactId>easymock</artifactId>
         <version>2.3</version>
