--- a/trunk/maven-greenbridge-plugin/pom.xml
+++ b/trunk/maven-greenbridge-plugin/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.apache.maven.plugins</groupId>
+  <groupId>com.googlecode.greenbridge</groupId>
   <artifactId>maven-greenbridge-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <version>1.0.0</version>
@@ -21,6 +21,11 @@
     <dependency>
           <groupId>com.googlecode.greenbridge</groupId>
           <artifactId>greenbridge-confluence</artifactId>
+          <version>1.0.0</version>
+    </dependency>
+    <dependency>
+          <groupId>com.googlecode.greenbridge</groupId>
+          <artifactId>greenbridge-tiddlywiki</artifactId>
           <version>1.0.0</version>
     </dependency>
     <dependency>
@@ -58,7 +63,7 @@
             </extension>
         </extensions>
     </build>
-        <repositories>
+    <repositories>
          <repository>
             <id>maven2-repository.dev.java.net</id>
             <name>Java.net Repository for Maven</name>
