--- a/trunk/greenbridge-junit/pom.xml
+++ b/trunk/greenbridge-junit/pom.xml
@@ -20,6 +20,11 @@
         <version>2.2.3</version>
     </dependency>
     <dependency>
+        <groupId>com.thoughtworks.xstream</groupId>
+        <artifactId>xstream</artifactId>
+        <version>1.2.2</version>
+    </dependency>
+    <dependency>
         <groupId>org.easymock</groupId>
         <artifactId>easymock</artifactId>
         <version>2.3</version>
